--- a/templates/login.html
+++ b/templates/login.html
@@ -19,18 +19,20 @@
       <p class="text-slate-400 text-sm mt-2">Tizimga kirish uchun ma'lumotlarni kiriting</p>
     </div>
 
-    <form class="space-y-6">
+    <form class="space-y-6" action="{% url "login_user" %}" method="post">
+      {% csrf_token %}
 
       <div>
         <label class="block text-sm text-slate-300 mb-2">Email</label>
         <div class="relative">
-          <input 
-            type="email" 
+          <input
+
+            type="email"
             required
             placeholder="email@example.com"
             class="w-full px-4 py-3 rounded-lg bg-slate-800 text-white placeholder-slate-500
                    border border-slate-700 focus:border-cyan-500 
-                   focus:ring-2 focus:ring-cyan-500/40 outline-none transition duration-300">
+                   focus:ring-2 focus:ring-cyan-500/40 outline-none transition duration-300" name="email">
         </div>
       </div>
 
@@ -43,7 +45,7 @@
             placeholder="••••••••"
             class="w-full px-4 py-3 rounded-lg bg-slate-800 text-white placeholder-slate-500
                    border border-slate-700 focus:border-purple-500 
-                   focus:ring-2 focus:ring-purple-500/40 outline-none transition duration-300">
+                   focus:ring-2 focus:ring-purple-500/40 outline-none transition duration-300" name="password">
         </div>
       </div>
 
@@ -64,16 +66,14 @@
                hover:opacity-90 transition duration-300 shadow-lg shadow-cyan-500/20">
         Kirish
       </button>
-
     </form>
-
     <p class="text-center text-slate-400 text-sm mt-8">
+
       Hisobingiz yo‘qmi?
       <a href="#" class="text-purple-400 hover:text-purple-300 transition">
         Ro‘yxatdan o‘tish
       </a>
     </p>
-
   </div>
 
 </body>
