--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Premium AI</title>
+  <title>Tarixchi AI</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="w-screen h-screen bg-[#0f172a] relative overflow-hidden flex items-center justify-center">
