--- a/templates/login.html
+++ b/templates/login.html
@@ -14,14 +14,15 @@
 
   <div class="relative w-full max-w-md p-10 bg-slate-900/80 backdrop-blur-2xl rounded-2xl shadow-[0_0_60px_rgba(0,0,0,0.6)] border border-slate-700">
 
-    <!-- Xato xabar -->
+    <!-- xato xabar -->
+
     {% if error_message %}
     <div id="error-message"
          class="bg-red-500 text-white p-3 rounded-md mb-4 opacity-0 transform -translate-y-5 transition-all duration-500">
       {{ error_message }}
     </div>
     {% endif %}
-    
+
     <div class="mb-8 text-center">
       <h1 class="text-3xl font-bold text-white tracking-wide">Kirish</h1>
       <p class="text-slate-400 text-sm mt-2">Tizimga kirish uchun ma'lumotlarni kiriting</p>
